--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,16 @@
             <version>2.4</version>
         </dependency>
         <dependency>
+            <groupId>net.java.dev.jets3t</groupId>
+            <artifactId>jets3t</artifactId>
+            <version>0.8.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jets3t</groupId>
+            <artifactId>synchronize</artifactId>
+            <version>0.8.1</version>
+        </dependency>
+        <dependency>
                     <groupId>commons-cli</groupId>
                     <artifactId>commons-cli</artifactId>
                     <version>1.2</version>
@@ -107,8 +117,43 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.6.1</version>
                 <configuration>
-
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1</version>
+                <executions>
+                    <execution>
+                        <phase>deploy</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <includeProjectDependencies>true</includeProjectDependencies>
+                    <includePluginDependencies>true</includePluginDependencies>
+                    <classpathScope>runtime</classpathScope>
+                    <executableDependency>
+                        <groupId>net.java.dev.jets3t</groupId>
+                        <artifactId>jets3t</artifactId>
+                    </executableDependency>
+                    <!-- main class to invoke synchronization -->
+                    <mainClass>org.jets3t.apps.synchronize.Synchronize</mainClass>
+                    <arguments>
+                        <argument><strong>--properties</strong></argument>
+                        <argument><strong>${project.build.directory}/${build.finalName}/WEB-INF/classes/aws.s3.synchronize.properties</strong></argument>
+                        <argument><strong>UP</strong></argument>
+                        <argument><strong>${project.build.directory}/${build.finalName}/path-to-synchronize/</strong></argument>
+                    </arguments>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.java.dev.jets3t</groupId>
+                        <artifactId>jets3t</artifactId>
+                        <version>0.8.1</version>
+                        <type>jar</type>
+                    </dependency>
+                </dependencies>
             </plugin>
 
         </plugins>
