added external library and cleaned up project

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
     </organization>
     <dependencies>
         <dependency>
+            <groupId>gov.jgi.gentech</groupId>
+            <artifactId>biopig-core</artifactId>
+            <version>0.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.12</version>
