--- a/pom.xml
+++ b/pom.xml
@@ -27,9 +27,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.mahout.hadoop</groupId>
+            <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <version>0.20.1</version>
+            <version>1.0.3</version>
         </dependency>
         <dependency>
             <groupId>commons-logging</groupId>
@@ -40,26 +40,6 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.4</version>
-        </dependency>
-        <dependency>
-            <groupId>net.java.dev.jets3t</groupId>
-            <artifactId>jets3t</artifactId>
-            <version>0.8.1</version>
-        </dependency>
-        <dependency>
-            <groupId>net.java.dev.jets3t</groupId>
-            <artifactId>synchronize</artifactId>
-            <version>0.8.1</version>
-        </dependency>
-        <dependency>
-                    <groupId>commons-cli</groupId>
-                    <artifactId>commons-cli</artifactId>
-                    <version>1.2</version>
-        </dependency>
-        <dependency>
-                    <groupId>commons-httpclient</groupId>
-                    <artifactId>commons-httpclient</artifactId>
-                    <version>3.1</version>
         </dependency>
     </dependencies>
     <build>
@@ -83,7 +63,6 @@
                     </archive>
                 </configuration>
             </plugin>
-
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
@@ -113,54 +92,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.6.1</version>
-                <configuration>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.1</version>
-                <executions>
-                    <execution>
-                        <phase>deploy</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <includeProjectDependencies>true</includeProjectDependencies>
-                    <includePluginDependencies>true</includePluginDependencies>
-                    <classpathScope>runtime</classpathScope>
-                    <executableDependency>
-                        <groupId>net.java.dev.jets3t</groupId>
-                        <artifactId>jets3t</artifactId>
-                    </executableDependency>
-                    <!-- main class to invoke synchronization -->
-                    <mainClass>org.jets3t.apps.synchronize.Synchronize</mainClass>
-                    <arguments>
-                        <argument><strong>--properties</strong></argument>
-                        <argument><strong>${project.build.directory}/${build.finalName}/WEB-INF/classes/aws.s3.synchronize.properties</strong></argument>
-                        <argument><strong>UP</strong></argument>
-                        <argument><strong>${project.build.directory}/${build.finalName}/path-to-synchronize/</strong></argument>
-                    </arguments>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>net.java.dev.jets3t</groupId>
-                        <artifactId>jets3t</artifactId>
-                        <version>0.8.1</version>
-                        <type>jar</type>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
         </plugins>
     </build>
 </project>
